--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,13 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
+<form method="post" action="meals">
+    <select required size="2" name="name">
+        <option value="1">User 1</option>
+        <option value="2">User 2</option>
+    </select>
+    <input type="submit" name="form" value="formAddIdUser">
+</form>
 <ul>
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
